--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,19 @@
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+<form>
+  <div class="form-group">
+    <h3>LOGIN DO SISTEMA</h3>
+  </div>
+  
+  <div class="form-group">
+    <label for="user">E-mail:</label>
+    <input type="email" class="form-control" id="user" placeholder="Informe o nome" required>
+  </div>
 
-<button type="button" class="btn btn-link">Link</button>
+  <div class="form-group">
+    <label for="senha">Senha:</label>
+    <input type="password" class="form-control" id="senha" placeholder="Informe a senha" required>
+  </div>
+
+  <button type="button" class="btn btn-primary">ACESSAR</button>
+
+
+</form>
