--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,16 @@
   </div>
   
   <div class="form-group">
-    <label for="user">E-mail:</label>
-    <input type="email" class="form-control" id="user" placeholder="Informe o nome" required>
+    <label for="login">E-mail:</label>
+    <input type="Login" class="form-control"  [(ngModel)]="usuario.login" id="Login" name="Login" placeholder="Informe o nome" required>
   </div>
 
   <div class="form-group">
     <label for="senha">Senha:</label>
-    <input type="password" class="form-control" id="senha" placeholder="Informe a senha" required>
+    <input type="password" class="form-control"  [(ngModel)]="usuario.senha" id="senha" name="senha" placeholder="Informe a senha" required>
   </div>
 
-  <button type="button" class="btn btn-primary">ACESSAR</button>
+  <button type="button" class="btn btn-primary" (click)="login()"  >Acessar</button>
 
 
 </form>
