--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,28 @@
-<form>
-  <div class="form-group">
-    <h3>LOGIN DO SISTEMA</h3>
-  </div>
-  
-  <div class="form-group">
+
+<form >
+
+  <div class="form-group"> 
+
+     <h3>Login do sistema</h3>
+  </div> 
+
+  <div class="form-group">  
     <label for="login">E-mail:</label>
-    <input type="Login" class="form-control"  [(ngModel)]="usuario.login" id="Login" name="Login" placeholder="Informe o nome" required>
+    <input type="email" class="form-control" #email="ngModel"  [(ngModel)] = "usuario.login"  id="login" name="login"  required>
+    <div *ngIf="email.invalid" class="alert alert-danger">
+       Login deve ser informado
+    </div>
+
   </div>
 
-  <div class="form-group">
+  <div class="form-group"> 
     <label for="senha">Senha:</label>
-    <input type="password" class="form-control"  [(ngModel)]="usuario.senha" id="senha" name="senha" placeholder="Informe a senha" required>
+    <input type="password" class="form-control" #senha="ngModel"  [(ngModel)]="usuario.senha" id="senha" name="senha"  required>
+     <div *ngIf="senha.invalid" class="alert alert-danger">
+       Senha deve ser informada
+    </div>
   </div>
 
-  <button type="button" class="btn btn-primary" (click)="login()"  >Acessar</button>
-
-
+  <button type="button" [disabled]="email.invalid || senha.invalid" class="btn btn-primary" (click)="login()"  >Acessar</button>
+  
 </form>
